google search done, 3 pages, no advanced search

--- a/images.html
+++ b/images.html
@@ -7,18 +7,14 @@
 </head>
 
 <body>
-
+    <a href="index.html">Google Search</a>
     <div class="container">
 
         <img src="pics/google.png" alt="Google logo">
-        <div>
-            <a href="images.html">Images Search</a>
 
-            <a href="advanced.html">Advanced Search</a>
-        </div>
-        <form action="https://www.google.com/search">
+        <form action="https://www.google.com/imghp">
             <input class="mysearchbar" type="text" name="query">
-            <input class="mysearchbutton" type="submit" value="Search with Google">
+            <input class="mysearchbutton" type="submit" value="Search Images with Google">
         </form>
 
     </div>
