test change back

--- a/Project0/index.html
+++ b/Project0/index.html
@@ -10,7 +10,7 @@
 
     <div class="container">
 
-        <img src="pics/google.png" alt="Google logoo">
+        <img src="pics/google.png" alt="Google logo">
         <div>
             <a href="images.html">Images Search</a>
 
